infra/k8s/base/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: melimbank
spec:
  selector: { app: gateway-service }
  ports:
    - port: 80
      targetPort: 8080
