infra/k8s/base/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: melimbank
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: melimbank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port: { number: 80 }
